deployment/deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: qutebapp-api
spec:
  selector:
    matchLabels:
      app: dotnet
      role: backend
  replicas: 1
  template:
    metadata:
      name: qutebapp-api-deployment
      labels:
        app: dotnet
        role: backend
        env: develop
    spec:
      containers:
      - name: qutebapp-api
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/user/v1
            port: 60917
        ports:
        - name: qapp-api-port
          containerPort: 60917
