deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qutebapp-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dotnet
    role: backend
