deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: qutebapp-api-ingress
spec:
  rules:
  - host: qutebapp-api.apps.et6om.gebeya.co
    http:
      paths:
      - backend:
          serviceName: qutebapp-api-service
          servicePort: 60917
        path: /
